<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/formulario_cadastro_titulo_dados_endereco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_casa"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_casa"
        android:text="@string/dados_do_endereco"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dados_endereco_cep"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="CEP"
        app:layout_constraintEnd_toEndOf="@id/formulario_cadastro_titulo_dados_endereco"
        app:layout_constraintStart_toStartOf="@id/formulario_cadastro_titulo_dados_endereco"
        app:layout_constraintTop_toBottomOf="@id/formulario_cadastro_titulo_dados_endereco">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/cep"
            android:inputType="number"
            android:maxLength="8" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dados_endereco_logradouro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Logradouro"
        app:layout_constraintEnd_toEndOf="@id/dados_endereco_cep"
        app:layout_constraintStart_toStartOf="@id/dados_endereco_cep"
        app:layout_constraintTop_toBottomOf="@id/dados_endereco_cep">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/letras_maiusculas_minusculas_com_espaco_em_branco"
            android:inputType="text"
            android:maxLength="50" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dados_endereco_numero"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="Número"
        app:layout_constraintStart_toStartOf="@+id/dados_endereco_cep"
        app:layout_constraintTop_toBottomOf="@id/dados_endereco_logradouro"
        app:layout_constraintWidth_default="wrap">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890"
            android:inputType="number"
            android:maxLength="6" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/dados_endereco_bairro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Bairro"
        app:layout_constraintEnd_toEndOf="@+id/dados_endereco_cep"
        app:layout_constraintStart_toEndOf="@+id/dados_endereco_numero"
        app:layout_constraintTop_toBottomOf="@+id/dados_endereco_logradouro">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/letras_maiusculas_minusculas_com_espaco_em_branco"
            android:inputType="text"
            android:maxLength="50" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dados_endereco_cidade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Cidade"
        app:layout_constraintEnd_toStartOf="@id/dados_endereco_uf"
        app:layout_constraintStart_toStartOf="@+id/dados_endereco_cep"
        app:layout_constraintTop_toBottomOf="@id/dados_endereco_bairro">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/letras_maiusculas_minusculas_com_espaco_em_branco"
            android:inputType="text"
            android:maxLength="50" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dados_endereco_uf"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="UF"
        app:layout_constraintEnd_toEndOf="@+id/dados_endereco_cep"
        app:layout_constraintTop_toTopOf="@+id/dados_endereco_cidade">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/letras_maiusculas"
            android:inputType="textCapCharacters"
            android:maxLength="2" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dados_endereco_complemento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Complemento"
        app:layout_constraintEnd_toEndOf="@+id/dados_endereco_uf"
        app:layout_constraintStart_toStartOf="@+id/dados_endereco_cep"
        app:layout_constraintTop_toBottomOf="@+id/dados_endereco_cidade">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/letras_maiusculas_minusculas_com_espaco_em_branco"
            android:inputType="text"
            android:maxLength="50" />
    </android.support.design.widget.TextInputLayout>
</android.support.constraint.ConstraintLayout>
